--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Taco Cloud</title>
 </head>
 <body>
-    <h1>Welcome to...</h1>
-    <img th:src="@{/images/taco.jpg}">
-    Testing
+<h1>Welcome to...</h1>
+<img th:src="@{/images/taco.jpg}">
+Testing
 </body>
 </html>
