--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -13,7 +13,7 @@
 <img th:src="@{/images/taco.jpg}" height="250" width="200"/>
 
 <!--tag::formTag[]-->
-<form method="POST" th:object="${design}">
+<form method="POST" th:object="${taco}">
     <!--end::all[] -->
 
     <span class="validationError"
