--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to...</h1>
-<img th:src="@{/images/taco.jpg}">
+<img th:src="@{/images/taco.jpg}" height="250" width="200">
 Testing
 </body>
 </html>
