--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -11,7 +11,7 @@
 
 <form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1>Order your taco creations!</h1>
-
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     <img th:src="@{/images/TacoCloud.png}"/>
     <a th:href="@{/taco}">Design another taco</a><br/>
 
@@ -99,7 +99,9 @@
 
     <input type="submit" value="Submit order"/>
 </form>
-
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+</form>
 </body>
 </html>
 <!--end::allButValidation[]-->
